maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: '=' expected but '(' found.
def getBisctuit():Array[Int](2) = {
                            ^JediEscaper:13: error: illegal start of simple expression
override def run() {
^