maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
def getBisctuit():Array[Int](2) = {
  for(i<- 0 to (getMondeLargeur()-1)){
    for(j<- 0 to (getMondeHauteur()-1)){
    	if(aBiscuit(i,j)){
        setIndication(i,j,0);
        return (i,j);
      }
  	}
  }
}

override def run() {
  println(getBisctuit());
}